modules/151-istio-ingress/templates/istio-do-not-modify-x-request-id.yaml
# This is needed for B2B SFA application which use x-request-id header and Istio modifies it for internal traffic.
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:  
  name: istio-do-not-modify-x-request-id
spec:
  configPatches:
    - applyTo: NETWORK_FILTER
      match:
        context: GATEWAY
        listener:
          filterChain:
            filter:
              name: envoy.filters.network.http_connection_manager
      patch:
        operation: MERGE
        value:
          typed_config:
            '@type': >-
              type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
            preserve_external_request_id: true
